--- a/2025_11_05/docker-compose.yaml
+++ b/2025_11_05/docker-compose.yaml
@@ -5,7 +5,21 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: admin123
     volumes:
-      - mysql-volume:var/lib/mysql
+      - mysql-volume:/var/lib/mysql
+    healthcheck:
+        test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+        timeout: 20s
+        retries: 10
+
+  app:
+    build: .
+    ports:
+      - "127.0.0.1:3000:3000"
+    depends_on:
+      database:
+        condition: service_healthy
+
+
 
 volumes:
   mysql-volume:
