--- a/2025_11_05/docker-compose.yaml
+++ b/2025_11_05/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: admin123
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin123
+      MYSQL_DATABASE: database
     volumes:
       - mysql-volume:/var/lib/mysql
     healthcheck:
@@ -33,8 +36,6 @@ services:
           ignore:
             - index.js
             - ./static
-
-
 
 volumes:
   mysql-volume:
