--- a/2025_11_05/docker-compose.yaml
+++ b/2025_11_05/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin123
       MYSQL_DATABASE: database
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - mysql-volume:/var/lib/mysql
     healthcheck:
