--- a/2025_11_19/package.json
+++ b/2025_11_19/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "express": "^4.21.2"
   },
   "devDependencies": {
