--- a/2025_11_19/.env.sample
+++ b/2025_11_19/.env.sample
@@ -5,4 +5,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:admin123@database:3306/database"
+; DATABASE_URL="mysql://root:admin123@database:3306/database"
+DATABASE_URL="mysql://root:admin123@127.0.0.1:3306/database"
