--- a/2025_11_05/package.json
+++ b/2025_11_05/package.json
@@ -11,6 +11,7 @@
   "author": "Wiktor Kycia",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "mysql2": "^3.15.3"
   }
