remove .env from the repo

--- a/2025_11_12/.env.sample
+++ b/2025_11_12/.env.sample
@@ -5,4 +5,13 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:admin123@database:3306/database"
+MYSQL_HOST="database"
+MYSQL_USER="root"
+MYSQL_PASSWORD="admin123"
+MYSQL_DB_NAME="database"
+MYSQL_PORT=3306
+
+APP_HOST="localhost"
+APP_PORT=3000
+
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_NAME}"
