correct env, compose file and port listening

--- a/2025_11_19/.env.sample
+++ b/2025_11_19/.env.sample
@@ -1,9 +1,10 @@
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
+MYSQL_HOST="database"
+MYSQL_USER="root"
+MYSQL_PASSWORD="admin123"
+MYSQL_DB_NAME="database"
+MYSQL_PORT=3306
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+APP_HOST="localhost"
+APP_PORT=3000
 
-; DATABASE_URL="mysql://root:admin123@database:3306/database"
-DATABASE_URL="mysql://root:admin123@127.0.0.1:3306/database"
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_NAME}"
