--- a/2025_11_19/package.json
+++ b/2025_11_19/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@eslint/json": "^0.13.2",
+    "dotenv-expand": "^12.0.3",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "nodemon": "^3.1.10",
