--- a/2025_11_25/docker-compose.yaml
+++ b/2025_11_25/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
         env_file:
             - .env
         environment:
-            DB_ROOT_PASSWORD: ${DB_PASSWORD}
-            DB_USER: ${DB_USER}
-            DB_PASSWORD: ${DB_PASSWORD}
-            DB_DATABASE: ${DB_NAME}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+#            MYSQL_USER: ${DB_USER}
+#            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_DATABASE: ${DB_NAME}
         ports:
             - '127.0.0.1:3306:${DB_PORT}'
         command: --default-authentication-plugin=mysql_native_password
