--- a/2025_11_25/package.json
+++ b/2025_11_25/package.json
@@ -15,6 +15,7 @@
         "@prisma/adapter-mariadb": "^6.19.0",
         "@prisma/client": "^6.19.0",
         "dotenv": "^17.2.3",
+        "dotenv-expand": "^12.0.3",
         "express": "^4.21.2"
     },
     "devDependencies": {
