--- a/2025_11_26/package.json
+++ b/2025_11_26/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
