--- a/2025_11_26/docker-compose.yaml
+++ b/2025_11_26/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB_NAME}
     ports:
       - "127.0.0.1:3306:${MYSQL_PORT}"
