--- a/2025_11_26/docker-compose-db-only.yaml
+++ b/2025_11_26/docker-compose-db-only.yaml
@@ -7,8 +7,8 @@ services:
       - .env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB_NAME}
     ports:
       - "127.0.0.1:3306:${MYSQL_PORT}"
@@ -28,6 +28,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    ports:
+      - "127.0.0.1:27017:27017"
     volumes:
       - ./mongo-data:/data/db
 
